crates/tuna/tests/parser/fail/super-param-kw.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperParamKw = (
  test: super makes: errors = ('yes')
)
